--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <table border="0" width="100%">
        <tr>
 			<td width="20%">
-			<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"</td>
+			<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"></td>
 			<td width="80%">
 			<a href="Home">Home</a>
 			<a href="About">About</a>
@@ -49,7 +49,7 @@
 	   <!--Banner Start-->
 	   
        <tr>
-			 <td><img width="100%" src="https://www.creativeitinstitute.com/front/images/banners/b1.jpg"</td>
+			 <td><img width="100%" src="https://www.creativeitinstitute.com/front/images/banners/b1.jpg"></td>
 	   </tr>	
 
        <!--Banner End-->
@@ -64,8 +64,8 @@
 			 <h1 align="center"><font size="5">Welcome to Creative IT Institute: Where IT Leaders are Created</font></h1>
 			 <p>Creative IT Institute, one of the leading IT training institutes in Bangladesh offers the best training opportunities. It has been playing a vital role to eradicate the unemployment problem since 2008. Enriched with quality training this institute has never failed to help the individuals to reveal their talents making harmony between creativity and IT. No matter what is your background, we are offering 30 courses for you conducted by experienced trainers to advance your skills.</p></td>
 		    
-			<td width="30%"valign="top">
-			<table border="0" width="100%"></td>
+			<td width="30%"valign="top"></td>
+			<table border="0" width="100%">
 			
 			<tr>
 			    <td><a href="https://www.creativeitinstitute.com/">Link 1</a></td>
